fix: menu buttons & breadcrumb style when title is too large

--- a/src/app/shared/ui/main-layout/main-layout.component.scss
+++ b/src/app/shared/ui/main-layout/main-layout.component.scss
@@ -1,5 +1,5 @@
 :host ::ng-deep .p-breadcrumb {
-  @apply p-3;
+  @apply whitespace-nowrap p-3;
 }
 
 :host ::ng-deep .p-slidemenu {
